# Arkai-Desktop

./: README.md  package.json  tsconfig.json
scripts/: generate-icons.js  generate_icons.py
src/: App.tsx  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/Assistant/: Chat.tsx  CodeBlock.tsx  PromptInput.tsx
src/components/Context/: FileTree.tsx  Workspace.tsx
src/components/Layout/: Header.tsx  Sidebar.tsx
src/hooks/: useAI.ts  useFileSystem.ts  useWorkspace.ts
src/stores/: aiStore.ts  workspaceStore.ts
src/types/: index.ts
