[package]
name = "arkai"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = [ "api-all"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
